--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"tsc -b && vite build\" \"nodemon ./src/services/index.js\"",
+    "dev": "concurrently \"vercel build\" \"tsc -b && vite build\" \"nodemon ./src/services/index.js\"",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
